uoproxy (0.5) unstable; urgency=low

  * build with Meson/ninja
  * rewrite in C++
  * fix auto-closing gumps in multi client mode
  * fix walk display on secondary client (workaround for v7 client bug)
  * hide client IP in CreateCharacter packet (antispy)
  * support new character creation packet (0xF8) from client 7.0.16.0
  * support new Buff/Debuff packet (0xDF)
  * fix "%char" command bug
  * fix character creation with antispy
  * fix Razor support due to protocol mismatch bug
  * fix seed for game login (ModernUO 0.9 compatibility)
  * work around target+walk desync
  * log to stderr instead of stdout
  * systemd support

 --

uoproxy (0.4) unstable; urgency=low

  * added SOCKS4 proxy support
  * no character list on attach
  * fixed crash when output buffer is full
  * walk: take position from walk_cancel packet
  * walk: resync if walk packets are out of sync
  * walk: don't clear queue when client disconnects
  * walk: accept out-of-sync "cancel" packets
  * attach: ignore undefined bytes in username/password
  * packets: support packet 0xf0 (ProtocolExtension)
  * support client 6.0.14.2
  * fake Razor handshake
  * support encrypted clients
  * fix phantom items in open containers after attaching
  * port to mingw32 (Windows)

 -- Max Kellermann <max@duempel.org>  Sat, 01 Sep 2012 09:59:39 +0200

uoproxy (0.3) unstable; urgency=low

  * support binding on an IP address
  * fix typo in log message
  * support the "Gump Packed" packet (0xdd)
  * return PA_DROP instead of PA_DELETED after attach
  * don't re-query the login server for attaching secondary client
  * allow short version string
  * remember mobile flags
  * added option "light"

 -- Max Kellermann <max@duempel.org>  Mon, 01 Mar 2010 22:44:33 +0100

uoproxy (0.2) unstable; urgency=low

  * fixed struct uo_packet_create_character
  * show which packet caused connection abort
  * only disconnect the faulty client on protocol error