@@ -16,6 +16,9 @@ server "play.uooutlands.com:2593"
 # server list for login server emulation
 #server_list "Defiance UOR=83.142.230.57:2594,Defiance Test=213.228.232.22:2594,Defiance T2A=83.142.228.16:2593,Defiance AOS=83.142.228.16:2594"
 
+# Send Seed+AccountLogin as UDP prior to opening TCP connection? (used by UO Sagas)
+#udp_knock no
+
 # stay connected in background?
 #background no
 
